module-1/apps/external/ingress/external-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: external-ingress-time
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/time`)
      services:
        - name: world-time-api
          port: 443
  tls:
    certResolver: le
